Fix results splitting